Updated the notebook for impedance mismatches

--- a/Notebooks/DL_Zmismatch.ipynb
+++ b/Notebooks/DL_Zmismatch.ipynb
@@ -5,20 +5,70 @@
    "metadata": {},
    "source": [
     "# dLFP Modeling\n",
-    "\n",
     "## Empirical Impedances\n",
     "\n",
     "### Overview\n",
     "Impedance mismatches can cause imperfect rejection of the DBS stimulation waveform.\n",
-    "If too much of the stim waveform leaks into the sensitive amplifier, we can \"blow out\" the amplifier.\n",
-    "Basically, it tries, but fails miserably, to take a signal one million times what it's expecting and output a signal one thousand times larger (gained).\n",
-    "Makes sense: real-world amplifiers can't output arbitrarily large voltages.\n",
-    "\n",
+    "In this notebook we'll determine the level of impedance mismatch we see in our clinical dLFP recordings.\n",
     "\n",
     "### Methods\n",
+    "We collected impedances from our patients over the entire timecourse of the study at their weekly clinical visits.\n",
+    "Impedances are measured in bipolar mode, with the IPG being cathode.\n",
+    "The test signal is a 100Hz, 3V signal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import DBSpace as dbo\n",
+    "from DBSpace.dLFP.impedances import Z_class\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Impedances are asymmetric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "We collected impedances from our patients over the entire timecourse of the study.\n",
-    "\n"
+    "print('Doing Impedance Mismatch Analysis - Script')\n",
+    "Z_lib = Z_class()\n",
+    "Z_lib.get_recZs()\n",
+    "Z_lib.plot_recZs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Impedance mismatches are large"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Impedance mismatches are dynamic\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z_lib.dynamics_measures()"
    ]
   }
  ],
