Updated notebooks for each of the key factors from the mismatch compression project

--- a/Notebooks/DL_Stim_Freq.ipynb
+++ b/Notebooks/DL_Stim_Freq.ipynb
@@ -15,9 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using DBSpace LATEST\n"
+     ]
+    }
+   ],
    "source": [
     "%reset -f\n",
     "import DBSpace as dbo\n",
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "baa4a0d104bd490c8b8c01e690af85af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=1000, description='Z1', max=1600, min=800, step=50), IntSlider(value=120…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def sim_freq(Z1=1100,Z3=1200,freq=130):\n",
     "    freq_run = sim.sim_diff(Ad=200,wform='moresine4',clock=True,stim_v=4,stim_freq=freq)\n",
