Unclear what these changes are, mostly notebooks looks like, with vsweep validation for plotting

--- a/Notebooks/archive/DL_Zmismatch.ipynb
+++ b/Notebooks/archive/DL_Zmismatch.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# dLFP Modeling\n",
-    "## Empirical Impedances\n",
+    "## Empirical Instabilities\n",
     "\n",
     "### Overview\n",
     "Impedance mismatches can cause imperfect rejection of the DBS stimulation waveform.\n",
@@ -136,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
