--- a/notebooks/multimodal_check/A1_MM_OR.ipynb
+++ b/notebooks/multimodal_check/A1_MM_OR.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "sns.set_style(\"white\")\n",
+    "sns.set_context(\"poster\")\n",
+    "\n",
+    "plt.rcParams[\"figure.figsize\"] = (20,15)\n",
+    "plt.rcParams['image.cmap'] = 'jet'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,107 +32,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'brPY'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/virati/Dropbox/projects/Research/MDD-DBS/Ephys/mismatch_compression/notebooks/multimodal_check/A1_MM_OR.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/virati/Dropbox/projects/Research/MDD-DBS/Ephys/mismatch_compression/notebooks/multimodal_check/A1_MM_OR.ipynb#ch0000001?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/virati/Dropbox/projects/Research/MDD-DBS/Ephys/mismatch_compression/notebooks/multimodal_check/A1_MM_OR.ipynb#ch0000001?line=10'>11</a>\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39m'\u001b[39m\u001b[39m/home/virati/Dropbox/projects/Research/MDD-DBS/Ephys/or_reset/\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/virati/Dropbox/projects/Research/MDD-DBS/Ephys/mismatch_compression/notebooks/multimodal_check/A1_MM_OR.ipynb#ch0000001?line=11'>12</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbrPY\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mbrpylib\u001b[39;00m \u001b[39mimport\u001b[39;00m NsxFile, brpylib_ver\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/virati/Dropbox/projects/Research/MDD-DBS/Ephys/mismatch_compression/notebooks/multimodal_check/A1_MM_OR.ipynb#ch0000001?line=12'>13</a>\u001b[0m plt\u001b[39m.\u001b[39mrcParams[\u001b[39m'\u001b[39m\u001b[39mimage.cmap\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mjet\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'brPY'"
+     ]
+    }
+   ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from numpy import arange\n",
-    "import scipy.signal as sig\n",
-    "import numpy as np\n",
-    "\n",
-    "import seaborn as sns\n",
-    "sns.set_style(\"white\")\n",
-    "sns.set_context(\"poster\")\n",
-    "\n",
-    "import sys\n",
-    "sys.path.append('/home/virati/Dropbox/projects/Research/MDD-DBS/Ephys/or_reset/')\n",
-    "from brPY.brpylib import NsxFile, brpylib_ver\n",
-    "plt.rcParams['image.cmap'] = 'jet'"
+    "from dbspace.utils.io.brPY.brpylib import NsxFile, brpylib_ver\n",
+    "from dbspace.viz.MM.intraop import blackrock_plot\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def blackrock_plot(pt='905',zoom=False,subtr_baseline=False,domain='TF'):\n",
-    "    if pt == '905':\n",
-    "        datafile = '/home/virati/MDD_Data/OR/DBS905/20150831-164204-002.ns2'\n",
-    "        start_t = 500\n",
-    "        elec_ids     = 'all'  # 'all' is default for all (1-indexed)\n",
-    "        start_time_s = start_t                       # 0 is default for all\n",
-    "        data_time_s  = 500                    # 'all' is default for all\n",
-    "        downsample   = 2                       # 1 is default\n",
-    "        plotch = 30\n",
     "\n",
-    "    elif pt == '906':\n",
-    "        datafile = '/home/virati/MDD_Data/OR/DBS906/20150727-174713/20150727-174713-001.ns2'\n",
-    "        start_t = 0\n",
-    "        elec_ids     = 'all'  # 'all' is default for all (1-indexed)\n",
-    "        start_time_s = start_t                       # 0 is default for all\n",
-    "        data_time_s  = 500                    # 'all' is default for all\n",
-    "        downsample   = 2                       # 1 is default\n",
-    "        plotch = 30\n",
-    "        \n",
-    "    nsx_file = NsxFile(datafile)\n",
-    "\n",
-    "    # Extract data - note: data will be returned based on *SORTED* elec_ids, see cont_data['elec_ids']\n",
-    "    cont_data = nsx_file.getdata(elec_ids, start_time_s, data_time_s, downsample)\n",
-    "\n",
-    "    #plt.plot(cont_data['data'][ch_idx,:])\n",
-    "    fs = cont_data['samp_per_s']\n",
-    "    print(fs)\n",
-    "    if subtr_baseline:\n",
-    "        sig_in = cont_data['data'][plotch,:] - cont_data['data'][0,:]\n",
-    "    \n",
-    "    else:\n",
-    "        sig_in = cont_data['data'][plotch,:]\n",
-    "    \n",
-    "    sig_in = sig.decimate(sig_in,1) #Just to use a clean antialiasing filter\n",
-    "    \n",
-    "    if domain == 'TF':\n",
-    "        if zoom:\n",
-    "            F,T,SG = sig.spectrogram(sig_in,fs = fs,nperseg=1024,noverlap=1000,nfft=2**11,window=sig.get_window('blackmanharris',1024))\n",
-    "\n",
-    "        else:\n",
-    "            F,T,SG = sig.spectrogram(sig_in,fs = fs,nperseg=1024,noverlap=1000,nfft=2**11,window=sig.get_window('blackmanharris',1024))\n",
-    "\n",
-    "        plt.figure(figsize=(30,15))\n",
-    "        plt.pcolormesh(T,F,10*np.log10(SG))\n",
-    "        plt.hlines(130,1,200,linewidth=10,color='r',linestyle='dotted')\n",
-    "        if zoom: plt.ylim((0,80))\n",
-    "        plt.xlabel('Time (sec)')\n",
-    "        plt.ylabel('Frequency (Hz)')\n",
-    "        sns.despine(left=True)\n",
-    "    else:\n",
-    "        fig, ax = plt.subplots(figsize=(30,15))\n",
-    "        ax.plot(sig_in)\n",
-    "\n",
-    "        # inset axes....\n",
-    "        axins = ax.inset_axes([0.5, 0.5, 0.47, 0.47])\n",
-    "        axins.plot(sig_in)\n",
-    "\n",
-    "        # sub region of the original image\n",
-    "        x1, x2, y1, y2 = 50000, 50500, -3000, 3000\n",
-    "        axins.set_xlim(x1, x2)\n",
-    "        axins.set_ylim(y1, y2)\n",
-    "        axins.set_xticklabels('')\n",
-    "        axins.set_yticklabels('')\n",
-    "\n",
-    "        ax.indicate_inset_zoom(axins)\n",
-    "        \n",
-    "        sns.despine(left=True)\n",
-    "    #%%\n",
-    "    # Close the nsx file now that all data is out\n",
-    "    nsx_file.close()\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
