impedance figures working

--- a/notebooks/impedances/impedance_mismatch_dynamics.ipynb
+++ b/notebooks/impedances/impedance_mismatch_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,21 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'impedance_file_path'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/workspaces/mismatch_compression/notebooks/impedances/impedance_mismatch_dynamics.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://dev-container%2B2f686f6d652f7669726174692f44726f70626f782f70726f6a656374732f52657365617263682f4d44442d4442532f45706879732f6d69736d617463685f636f6d7072657373696f6e/workspaces/mismatch_compression/notebooks/impedances/impedance_mismatch_dynamics.ipynb#W1sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdbspace\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msignal\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdLFP\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mimpedances\u001b[39;00m \u001b[39mimport\u001b[39;00m Z_class\n\u001b[1;32m      <a href='vscode-notebook-cell://dev-container%2B2f686f6d652f7669726174692f44726f70626f782f70726f6a656374732f52657365617263682f4d44442d4442532f45706879732f6d69736d617463685f636f6d7072657373696f6e/workspaces/mismatch_compression/notebooks/impedances/impedance_mismatch_dynamics.ipynb#W1sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://dev-container%2B2f686f6d652f7669726174692f44726f70626f782f70726f6a656374732f52657365617263682f4d44442d4442532f45706879732f6d69736d617463685f636f6d7072657373696f6e/workspaces/mismatch_compression/notebooks/impedances/impedance_mismatch_dynamics.ipynb#W1sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m Z_lib \u001b[39m=\u001b[39m Z_class(impedance_file_path\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m/home/vscode/data/Anatomy/\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell://dev-container%2B2f686f6d652f7669726174692f44726f70626f782f70726f6a656374732f52657365617263682f4d44442d4442532f45706879732f6d69736d617463685f636f6d7072657373696f6e/workspaces/mismatch_compression/notebooks/impedances/impedance_mismatch_dynamics.ipynb#W1sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m Z_lib\u001b[39m.\u001b[39mload_data_from_file()\n\u001b[1;32m      <a href='vscode-notebook-cell://dev-container%2B2f686f6d652f7669726174692f44726f70626f782f70726f6a656374732f52657365617263682f4d44442d4442532f45706879732f6d69736d617463685f636f6d7072657373696f6e/workspaces/mismatch_compression/notebooks/impedances/impedance_mismatch_dynamics.ipynb#W1sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m Z_lib\u001b[39m.\u001b[39mget_recZs()\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'impedance_file_path'"
+     ]
+    }
+   ],
    "source": [
     "from dbspace.signal.dLFP.impedances import Z_class\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "Z_lib = Z_class()\n",
+    "Z_lib = Z_class(impedance_file_path='/home/vscode/data/Anatomy/CT/Zs_GMs_Es.xlsx', do_pts=[\"DBS901\", \"DBS903\", \"DBS905\", \"DBS906\", \"DBS907\", \"DBS908\"])\n",
     "Z_lib.load_data_from_file()\n",
     "Z_lib.get_recZs()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -103,11 +115,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "1b6c6b8a045511a0aa37ba66a741cd77523bb8512803dcaffb66d638f40a45c7"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('.venv': venv)",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -123,7 +132,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
