sim figures looking good

--- a/notebooks/in_silico/real_stim_waveform.ipynb
+++ b/notebooks/in_silico/real_stim_waveform.ipynb
@@ -18,23 +18,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using DBSpace LATEST\n"
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (2495057284.py, line 15)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [2]\u001b[0;36m\u001b[0m\n\u001b[0;31m    def decimated(timeseries: np.ndarray, Fs: int, factor: int =100, clip_samples):\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
      ]
     }
    ],
-   "source": [
-    "\n",
-    "from dbspace.signal.spot_check import spot_check\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def stim_plot(ts,Fs):\n",
     "    plt.figure()\n",
@@ -44,36 +35,46 @@
     "    plt.subplot(212)\n",
     "    F,Pxx = sig.welch(ts,fs=Fs,nfft=2**15,nperseg=2**10,noverlap=2**10-5)\n",
     "    plt.plot(F,(Pxx),linewidth=5,label='Sampled')\n",
-    "    #plt.xlim((0,500))\n",
     "    \n",
     "    return F\n",
     "\n",
     "def raw(timeseries):\n",
     "    stim_plot(timeseries[:,1],Fs=1e6)\n",
     "    \n",
-    "def decimated(timeseries, factor=100):\n",
+    "def decimated(timeseries: np.ndarray, Fs: int, factor: int =100, clip_samples):\n",
+    "    '''\n",
+    "        Inputs:\n",
+    "        ------\n",
+    "            timeseries : np.ndarray\n",
+    "                Timeseries for analysis. Assumes dim[0] is time.\n",
+    "    '''\n",
+    "    if clip_samples is None:\n",
+    "        clip_samples = 70_000\n",
+    "    elif clip_samples == -1:\n",
+    "        clip_samples = timeseries.shape[0]\n",
+    "\n",
     "    if factor == 1:\n",
-    "        ds_stim = timeseries[0:70000,1]    \n",
+    "        ds_stim = timeseries[0:clip_samples,...]    \n",
     "    else:\n",
-    "        ds_stim = sig.decimate(timeseries[0:70000,1],q=factor)\n",
+    "        ds_stim = sig.decimate(timeseries[0:clip_samples,...],q=factor)\n",
     "        \n",
-    "    print(stim_plot(ds_stim,Fs=1e6/factor))\n"
+    "    print(stim_plot(ds_stim,Fs=Fs/factor))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Relevant Files\n",
     "ipg_infile = '/home/vscode/data/stim_waveform/ssipgwave_vreg_Ra1p1kOhm_1usdt.txt'\n",
-    "sample_voltage_sweep = '/home/vscode/data/MDD_Data/Benchtop/VRT_Impedance_RB/Session_2018_04_24_Tuesday/demo_2018_04_24_16_53_36__MR_0.txt'"
+    "sampling_freq = 1e6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
